# cbeam

./: .gitignore  CMakeLists.txt  README.md  uncrustify.cfg
src/: ctrl.cpp  ctrl.h  limits.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  slider.ui
src_rpi/: test2.py  test3.py
